Fixed Max Height and Padding

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -51,7 +51,6 @@ a {
 	position: relative;
 	margin: 0 auto;
 	padding: 0;
-
 }
 
 
@@ -73,6 +72,7 @@ a {
 	margin: 0 auto;
 	position: relative;
 	min-height: 50px;
+	max-height: 200px;
 	padding:30px 0;
 	font-size: 18px;
 	font-family: 'Open Sans', sans-serif;
@@ -128,12 +128,12 @@ a {
 
 
 /* SECTIONS */
-.sTop {
+.stop {
 	min-height: 130px;
 	background:#fff;
 	color:#3d3d3d;
-	padding: 50px 0;
-	height: 300px;
+	padding: 10px 0;
+	height: 150px;
 
 }
 
